Fix device row height and icon alignment

--- a/data/styles/DiskRenderer.css
+++ b/data/styles/DiskRenderer.css
@@ -1,3 +1,7 @@
+.sidebar button.image-button {
+    padding: 0;
+}
+
 .sidebar levelbar block {
     border: none;
     box-shadow: none;
